# not_a_xenium25_demo

./: .gitmodules  CMakeLists.txt  not_a_xenium25_demo.c
lib/Euzebia3D/: CMakeLists.txt
lib/Euzebia3D/arithmetics/: fpa.c  fpa.h  lookup_tables.c  lookup_tables.h  vectors.c  vectors.h
lib/Euzebia3D/cameraFactory/: ICameraFactory.h  camera.h  cameraFactory.c  cameraFactory.h
lib/Euzebia3D/display/: IDisplay.h  display.c  display.h
lib/Euzebia3D/file_reader/: IFileReader.h  fileReader.c  fileReader.h
lib/Euzebia3D/file_reader/fatfs/: diskio.c
lib/Euzebia3D/file_reader/sd_driver/: sd_driver.c  sd_driver.h
lib/Euzebia3D/hardware/: IHardware.h  hardware.c  hardware.h
lib/Euzebia3D/lightFactory/: ILightFactory.h  light.h  lightFactory.c  lightFactory.h
lib/Euzebia3D/meshFactory/: IMeshFactory.h  mesh.c  mesh.h  meshFactory.c  meshFactory.h
lib/Euzebia3D/painter/: IPainter.h  painter.c  painter.h
lib/Euzebia3D/renderer/: IRenderer.h  renderer.c  renderer.h
lib/Euzebia3D/shared/: gfx.c  gfx.h  pins.h
lib/second_core/: CMakeLists.txt  second_core.c  second_core.h
